--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 </div>
 </div>
 <!-- End of fifth section -->
-<div style="background-image: url(./porto-images/minerva_01.png);" class="flex h-[60vh] mt-20 px-40">
+<div style="background-image: url(./porto-images/minerva_01.png);" class="flex lg:flex-row flex-col h-[60vh] mt-20 lg:px-40 px-5">
 <div>
   <h1 class=" text-[60px] text-[#a18a4d] ">We are a university of excellence</h1>
 </div>
@@ -176,8 +176,8 @@
 </div>
 <div class="bg-gray-100 h-1 w-full"><hr></div>
 <!-- End of sixth section -->
-<div><h1 class="text-[60px] text-[#a18a4d] pl-40 mt-20">Research</h1></div>
-<div class="flex px-40 mt-10 gap-6">
+<div><h1 class="text-[60px] text-[#a18a4d] lg:pl-40 pl-5 lg:mt-20 mt-96">Research</h1></div>
+<div class="flex lg:flex-row flex-col lg:px-40 lg:mt-10 gap-6">
   <div class="flex-1">
     <h1 class="my-5 font-bold text-[60px]">Research University</h1>
     <p class="my-5  text-[20px] font-extralight">With 48 research units and a highly qualified scientific community, the University of Porto is one of the largest producers of science in Portugal, contributing to almost 25% of all national scientific output.</p>
@@ -188,7 +188,7 @@
   </div>
 </div>
 <div class="bg-[#a18a4d]">
-  <div class=" mt-10 flex flex-col justify-center items-center gap-8 text-white  px-40">
+  <div class=" mt-10 flex flex-col justify-center items-center gap-8 text-white  lg:px-40 px-5">
     <div class="flex justify-center items-center pt-20">
       <div class="relative text-6xl">
         <i class="fa-thin fa-bullhorn fa-rotate-by fa-2xl " style="--fa-rotate-angle: 300deg;"></i>
@@ -213,7 +213,7 @@
 <div class="bg-white w-full">
   <hr>
 </div>
-<div class="flex justify-center gap-40 mb-5 text-3xl">
+<div class="flex lg:flex-row flex-col justify-center lg:gap-40 gap-10 mb-5 text-3xl">
   <p>+300<br>
     Courses</p>
   <p>+35.000<br>
@@ -224,16 +224,16 @@
   </div>
  
 </div>
-<div><h1 class="text-3xl text-[#a18a4d] mt-20 pl-40 mb-10">Frequently asked questions</h1></div>
-<div class="flex gap-5 px-40 mt-10 mb-10 text-2xl">
+<div><h1 class="text-3xl text-[#a18a4d] mt-20 lg:pl-40 px-5 mb-10">Frequently asked questions</h1></div>
+<div class="flex gap-5 lg:px-40 mt-10 mb-10 text-2xl px-5">
   <h1>International students</h1>
-  <h1>Prospective students</h1>
-  <h1>Professionals</h1>
-  <h1>Alumni</h1>
-  <h1>U.porto students</h1>
+  <h1 class="lg:block hidden">Prospective students</h1>
+  <h1 class="lg:block hidden">Professionals</h1>
+  <h1 class="lg:block hidden">Alumni</h1>
+  <h1 class="lg:block hidden">U.porto students</h1>
 </div>
 <div class="bg-gray-200 mx-40 h-0.5"><hr></div>
-<div class="flex mt-10 px-40">
+<div class="flex lg:flex-row flex-col-reverse mt-10 lg:px-40 px-5">
   <div>
     <h1 class="text-3xl text-[#a18a4d]">International Students</h1>
     <p class="mt-10 text-2xl">Welcome! In this area you will find the answers you need to start and make the most of your experience at the University. We hope to help you... and welcome you soon!</p>
@@ -254,8 +254,8 @@
   </div>
 </div>
 <div class="bg-[#333] text-white mt-20" style="background-image: url(./porto-images/img_minerva_footer.png);">
-  <div class="px-40">
-<div class="flex justify-center gap-40 mt-20 pt-20">
+  <div class="lg:px-40 px-5">
+<div class="flex lg:flex-row flex-col justify-center lg:gap-40 gap-4 lg:mt-20 pt-20 mt-5">
 <h1 class="text-[#a18a4d]">Media</h1>
 <div>
 <h1>U.Porto News</h1>
@@ -267,7 +267,7 @@
 
 </div>
 <!-- first line -->
-<div class="flex justify-center gap-40 mt-20">
+<div class="flex lg:flex-row flex-col justify-center lg:gap-40 gap-4 lg:mt-20 mt-5">
   <h1 class="text-[#a18a4d]">U.porto</h1>
 <div>
 <h1>U.Porto News</h1>
@@ -299,7 +299,7 @@
   <hr>
 </div>
 <!-- <Fourth line -->
-<div class="flex justify-between gap-40 mt-20">
+<div class="flex lg:flex-row flex-col justify-between lg:gap-40 gap-4 lg:mt-20 mt-5">
   <div class="flex gap-10">
       <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
       <i class="fa-brands fa-youtube" style="color: #8d8e91;"></i>
@@ -316,7 +316,7 @@
       <h1></h1>
 </div>
     </div>
-    <div class="flex  gap-10 text-white mt-20">
+    <div class="flex lg:flex-row flex-col gap-5 lg:gap-10 text-white lg:mt-20 mt-5">
       <h1>University of Porto 2024</h1>
       <h1>Personal Data Protectio</h1>
       <h1>Privacy Policy</h1>
