--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <div class=" flex-1 lg:pl-40 flex flex-col gap-4 px-5">
   <input type="text" placeholder=" All" class="bg-white border border-black lg:w-full w-[350px] h-16 text-[20px]"></input>
   <input type="text" placeholder=" Please enter course keywords..." class="bg-white border border-black lg:w-full w-[350px] h-16 text-[20px]"></input>
-  <button class="bg-[#a18a4d] lg:px-64 lg:py-4 w-[350px]">Search</button>
+  <button class="bg-[#a18a4d]  lg:py-4 lg:w-full w-[350px]">Search</button>
 </div>
 <div class="flex-1 flex flex-col mx-5">
   <h1 class="text-3xl mb-5">Courses from A to Z:</h1>
@@ -103,7 +103,7 @@
 </div>
   <!-- End of fourth section -->
 <div class="bg-gray-100 mt-20">
-<div class="flex lg:flex-row flex-col gap-2 lg:justify-between lg:px-40 mt-20 px-5">
+<div class="flex lg:flex-row flex-col gap-2 lg:justify-between lg:px-40 pt-10 px-5">
   <div>
   <h1 class="text-[#a18a4d] text-[60px]">News</h1>
 </div>
@@ -150,7 +150,7 @@
     </div>
   </div>
 </div>
-<div class="flex mt-10 lg:pl-40 gap-4 pl-5">
+<div class="flex mt-10 lg:pl-40 gap-4 pl-5 mb-5">
   <i class="fa-solid fa-square-caret-left text-[50px]" style="color: #c9cdd4;"></i>
   <i class="fa-solid fa-square-caret-right text-[50px]" style="color: #a18a4d;"></i>
 </div>
