--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
       <img src="porto-images/ijup-2024_12.format-jpeg.jpg">
     </div>
   </div>
-  <div class="flex-1 bg-white lg:block hidden">
+  <div class="flex-1 bg-white h-auto lg:block hidden">
     <div class="mx-5">
       <h1 class="text-[#a18a4d] my-5 ">Cultura</h1>
       <p class="mb-20 text-[20px]">MHNC-UP abre "fora de horas" para celebrar os Museus e a Ciência
@@ -150,7 +150,7 @@
     </div>
   </div>
 </div>
-<div class="flex mt-10 lg:pl-40 gap-4 pl-5 mb-5">
+<div class="flex mt-10 lg:pl-40 gap-4 pl-5 pb-7">
   <i class="fa-solid fa-square-caret-left text-[50px]" style="color: #c9cdd4;"></i>
   <i class="fa-solid fa-square-caret-right text-[50px]" style="color: #a18a4d;"></i>
 </div>
@@ -225,7 +225,7 @@
  
 </div>
 <div><h1 class="text-3xl text-[#a18a4d] mt-20 lg:pl-40 px-5 mb-10">Frequently asked questions</h1></div>
-<div class="flex gap-5 lg:px-40 mt-10 mb-10 text-2xl px-5">
+<div class="flex gap-5 lg:px-40 lg:mt-10 mt-5 mb-10 text-2xl px-5">
   <h1>International students</h1>
   <h1 class="lg:block hidden">Prospective students</h1>
   <h1 class="lg:block hidden">Professionals</h1>
@@ -233,9 +233,9 @@
   <h1 class="lg:block hidden">U.porto students</h1>
 </div>
 <div class="bg-gray-200 mx-40 h-0.5"><hr></div>
-<div class="flex lg:flex-row flex-col-reverse mt-10 lg:px-40 px-5">
+<div class="flex lg:flex-row flex-col-reverse lg:mt-10 mt-5 lg:px-40 px-5">
   <div>
-    <h1 class="text-3xl text-[#a18a4d]">International Students</h1>
+    <h1 class="text-3xl text-[#a18a4d] mt-5">International Students</h1>
     <p class="mt-10 text-2xl">Welcome! In this area you will find the answers you need to start and make the most of your experience at the University. We hope to help you... and welcome you soon!</p>
     <div class="flex gap-4">
       <div class="flex gap-3 mt-5">
@@ -256,7 +256,7 @@
 <div class="bg-[#333] text-white mt-20" style="background-image: url(./porto-images/img_minerva_footer.png);">
   <div class="lg:px-40 px-5">
 <div class="flex lg:flex-row flex-col justify-center lg:gap-40 gap-4 lg:mt-20 pt-20 mt-5">
-<h1 class="text-[#a18a4d]">Media</h1>
+<h1 class="text-[#a18a4d] text-[30px]">Media</h1>
 <div>
 <h1>U.Porto News</h1>
 <h1>Brochures and Presentations</h1>
@@ -268,7 +268,7 @@
 </div>
 <!-- first line -->
 <div class="flex lg:flex-row flex-col justify-center lg:gap-40 gap-4 lg:mt-20 mt-5">
-  <h1 class="text-[#a18a4d]">U.porto</h1>
+  <h1 class="text-[#a18a4d] text-[30px]">U.porto</h1>
 <div>
 <h1>U.Porto News</h1>
 <h1>Brochures and Presentations</h1>
@@ -300,23 +300,24 @@
 </div>
 <!-- <Fourth line -->
 <div class="flex lg:flex-row flex-col justify-between lg:gap-40 gap-4 lg:mt-20 mt-5">
-  <div class="flex gap-10">
+  <div class="flex gap-10 text-xl">
       <i class="fa-brands fa-instagram" style="color: #ffffff;"></i>
       <i class="fa-brands fa-youtube" style="color: #8d8e91;"></i>
-      <i class="fa-brands fa-x-twitter" style="color: #8d8e91;" ></i>
+      <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
+      <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
       <i class="fa-brands fa-linkedin" style="color: #ffffff;"></i>
     </div>
     <div>
       <h1>Contacts</h1>
       <h1>Reitoria da Universidade do Porto</h1>
-      <h1 >Praça Gomes Teixeira
+      <h1 class="mt-5">Praça Gomes Teixeira<br>
         4099-002 Porto, Portugal</h1>
-      <h1>Tel.: (+351) 220 408 000
+      <h1 class="mt-5">Tel.: (+351) 220 408 000<br>
         E-mail: up@up.pt</h1>
       <h1></h1>
 </div>
     </div>
-    <div class="flex lg:flex-row flex-col gap-5 lg:gap-10 text-white lg:mt-20 mt-5">
+    <div class="flex lg:flex-row flex-col gap-5 lg:gap-10 text-white lg:mt-20 mt-5 pb-5">
       <h1>University of Porto 2024</h1>
       <h1>Personal Data Protectio</h1>
       <h1>Privacy Policy</h1>
