--- a/index.html
+++ b/index.html
@@ -28,11 +28,7 @@
       <div class="flex gap-5">
          <div class="flex gap-4 justify-center items-center">
             <p class="text-white">About the university</p>
-
-            <i
-               class="fa-solid fa-caret-down m-auto"
-               style="color: #5d6065;"
-            ></i>
+            <i class="fa-solid fa-caret-down text-[#5d6065]" ></i>
          </div>
 
          <div class="flex gap-4 justify-center items-center">
@@ -90,24 +86,26 @@
    <!-- end of first nav-bar -->
    
    <div>
-      <div class="sticky top-0 flex flex-row bg-gray-200">
+      <div class="sticky top-0 flex bg-gray-200">
          <div class="flex flex-row lg:px-40 lg:gap-20 px-5 gap-5 lg:justify-between justify-center">
-            <div class="flex-1 lg:hidden">
-               <i
-                  class="fa-solid fa-bars"
-                  style="color: #000000;"
-               ></i>
+            <div>
+               <div class="flex lg:hidden">
+                  <i
+                     class="fa-solid fa-bars"
+                     style="color: #000000;"
+                  ></i>
+               </div>
+      
+               <div class="flex">
+                  <img
+                     src="porto-images/logo.svg"
+                     class="lg:h-24 w-96"
+                  >
+               </div>
             </div>
    
-            <div class="flex-1">
-               <img
-                  src="porto-images/logo.svg"
-                  class="lg:h-24 w-96"
-               >
-            </div>
-   
-            <div class="flex-1 lg:flex flex-row justify-end gap-8 hidden">
-               <div class="flex-1 flex gap-4 mt-10 text-[20px]">
+            <div class="lg:flex flex-row justify-end gap-8 hidden">
+               <div class="flex items-center gap-12 text-[20px]">
                   <h1 class="font-bold uppercase">Study</h1>
    
                   <h1 class="font-bold uppercase">Research</h1>
@@ -117,22 +115,15 @@
                   <h1 class="font-bold uppercase">Live</h1>
    
                   <h1 class="font-bold uppercase">Explore</h1>
-               </div>
-   
-               <div class="flex-1 flex flex-col mt-10">
-                  <div class="flex flex-row gap-6 justify-center">
+
+                  <div class="flex flex-row gap-10 items-center border-b-2 border-black">
                      <p>Search</p>
-   
-                     <i
-                        class="fa-thin fa-magnifying-glass"
-                        style="color: #0f0f10;"
-                     ></i>
-                  </div>
-   
-                  <div class="bg-black h-0.5">
-                     <hr>
+                     <i class="fa-regular fa-magnifying-glass" ></i>
                   </div>
                </div>
+
+                  
+   
             </div>
          </div>
       </div>
