--- a/index.html
+++ b/index.html
@@ -87,25 +87,24 @@
    
    <div>
       <div class="sticky top-0 flex bg-gray-200">
-         <div class="flex flex-row lg:px-40 lg:gap-20 px-5 gap-5 lg:justify-between justify-center">
-            <div>
+         <div class="flex flex-row lg:px-40 lg:gap-20 px-5 py-5 gap-20 lg:justify-between justify-between">
+            <div class="flex items-center gap-4">
                <div class="flex lg:hidden">
                   <i
                      class="fa-solid fa-bars"
-                     style="color: #000000;"
                   ></i>
                </div>
       
                <div class="flex">
                   <img
                      src="porto-images/logo.svg"
-                     class="lg:h-24 w-96"
+                     class="lg:h-24 lg:w-96 w-48"
                   >
                </div>
             </div>
    
-            <div class="lg:flex flex-row justify-end gap-8 hidden">
-               <div class="flex items-center gap-12 text-[20px]">
+            <div class="lg:flex flex-row justify-end items-center gap-8">
+               <div class="lg:flex items-center gap-12 text-[20px] hidden">
                   <h1 class="font-bold uppercase">Study</h1>
    
                   <h1 class="font-bold uppercase">Research</h1>
@@ -120,9 +119,12 @@
                      <p>Search</p>
                      <i class="fa-regular fa-magnifying-glass" ></i>
                   </div>
+
                </div>
 
-                  
+               <div class="lg:hidden flex">
+                  <i class="fa-solid fa-bars-sort"></i>
+               </div>
    
             </div>
          </div>
@@ -138,7 +140,7 @@
             >
          </div>
    
-         <div class="absolute bottom-0 lg:bottom-40 left-0   lg:mx-32 lg:w-[500px] w-full  bg-black opacity-70">
+         <div class="absolute bottom-0 lg:bottom-40 left-0   lg:mx-32 lg:w-[500px] w-full  bg-black opacity-70 pb-5">
             <h1 class="text-white  mx-5 my-5">Let us grow together</h1>
    
             <p class="lg:mx-5 text-white my-5 lg:block hidden">
@@ -345,7 +347,7 @@
    
       <div class="flex lg:flex-row flex-col lg:px-40 lg:mt-10 gap-6">
          <div class="flex-1">
-            <h1 class="my-5 font-bold text-[60px]">Research University</h1>
+            <h1 class="my-5 font-bold text-[60px] pl-5">Research University</h1>
    
             <p class="my-5  text-[20px] font-extralight">
                With 48 research units and a highly qualified scientific community, the University of Porto is one of the largest producers of science in Portugal, contributing to almost 25% of all national scientific output.
