--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
    <!-- end of first nav-bar -->
    
    <div>
-      <div class="sticky top-0 flex bg-gray-200">
+      <div class="sticky top-0 z-20 flex bg-gray-200">
          <div class="flex flex-row lg:px-40 lg:gap-20 px-5 py-5 gap-20 lg:justify-between justify-between">
             <div class="flex items-center gap-4">
                <div class="flex lg:hidden">
@@ -98,7 +98,7 @@
                <div class="flex">
                   <img
                      src="porto-images/logo.svg"
-                     class="lg:h-24 lg:w-96 w-48"
+                     class="lg:h-12 lg:w-96 w-48"
                   >
                </div>
             </div>
@@ -155,13 +155,13 @@
          <h1 class="text-[60px] lg:pl-40 text-[#a18a4d] mt-20 pl-5">Study</h1>
       </div>
    
-      <div class="lg:flex-row flex flex-col justify-between mt-10 lg:px-40 gap-10 px-5">
-         <div>
-            <h1 class="text-3xl mx-5">Your future is here</h1>
+      <div class=" flex lg:flex-row items-start flex-col justify-between mt-10 lg:px-40 gap-10 px-5">
+         <div class="w-3/5">
+            <h1 class=" text-[28px] font-bold w-full">Your future is here!</h1>
          </div>
    
          <div>
-            <p class="lg:mx-9 text-2xl mx-5 mt-5">
+            <p class="lg:mx-10 text-[20px] px-5 mt-5 lg:mt-0">
                Gathering the most complete offer of training programmes in Portugal, the 14 faculties of the U.Porto offer unique conditions to those who want to build an academic path of excellence and properly valued by the labour market.
             </p>
          </div>
